@@ -242,6 +242,15 @@ void tickit_pen_set_int_attr(TickitPen *pen, TickitPenAttr attr, int val);
 
 int  tickit_pen_get_colour_attr(const TickitPen *pen, TickitPenAttr attr);
 void tickit_pen_set_colour_attr(TickitPen *pen, TickitPenAttr attr, int value);
+
+typedef struct {
+  uint8_t r, g, b;
+} TickitPenRGB8;
+
+bool tickit_pen_has_colour_attr_rgb8(const TickitPen *pen, TickitPenAttr attr);
+TickitPenRGB8 tickit_pen_get_colour_attr_rgb8(const TickitPen *pen, TickitPenAttr attr);
+void tickit_pen_set_colour_attr_rgb8(TickitPen *pen, TickitPenAttr attr, TickitPenRGB8 value);
+
 bool tickit_pen_set_colour_attr_desc(TickitPen *pen, TickitPenAttr attr, const char *value);
 
 void tickit_pen_clear_attr(TickitPen *pen, TickitPenAttr attr);
