@@ -29,6 +29,8 @@ tickit_pen_set_bool_attr.3 = tickit_pen_get_bool_attr.3
 tickit_pen_set_int_attr.3 = tickit_pen_get_int_attr.3
 tickit_pen_set_colour_attr.3 = tickit_pen_get_colour_attr.3
 tickit_pen_set_colour_attr_desc.3 = tickit_pen_get_colour_attr.3
+tickit_pen_set_colour_attr_rgb8.3 = tickit_pen_get_colour_attr_rgb8.3
+tickit_pen_has_colour_attr_rgb8.3 = tickit_pen_get_colour_attr_rgb8.3
 tickit_pen_copy_attr.3 = tickit_pen_copy.3
 tickit_pen_lookup_attr.3 = tickit_pen_attrname.3
 tickit_pen_equiv.3 = tickit_pen_equiv_attr.3
